--- a/css/styles.css
+++ b/css/styles.css
@@ -629,6 +629,7 @@ a:hover{
 }
 .dairy__table{
   width:100%;
+  max-width: 1000px ;
   border-collapse:collapse;
   margin-bottom:40px;
 }
@@ -636,7 +637,7 @@ a:hover{
   padding:12px 16px;
   text-align:left;
   border-bottom:1px solid var(--color-border);
-  white-space:nowrap;
+  
 }
 .dairy__table th{
   background-color:var(--color-muted);
